# todo-app

./: README.md
backend/: .gitignore  main.py  pyproject.toml
backend/core/: config.py  dependencies.py
backend/core/models/: crud.py  database.py  model.py
backend/core/schemas/: schema.py
backend/database/: crud.py  database.py  model.py
backend/routers/: auth.py  todo.py  users.py
backend/tests/: test_main.py
frontend/: package-lock.json
frontend/src/: App.svelte
